fix: styling issue on firefox fore gallery

--- a/src/styles/Gallery.scss
+++ b/src/styles/Gallery.scss
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 100%;
+
     h1 {
         font-size: 2rem;
     }
     .collections {
-        // width: 100%;
         column-width: 12rem;
         column-gap: 0.5rem;
         background: #c0c0c0;
